--- a/.env
+++ b/.env
@@ -1,35 +1,11 @@
-PG_PASSWORD=xk56iIUYV1eihMke7W0gbnfnl4gBkArsF26kttM96R8utWA4hJ
-
-
-# Password for the 'kibana_system' user (at least 6 characters)
-KIBANA_PASSWORD=password
-
-# Version of Elastic products
-STACK_VERSION=8.4.0
-
 # Set the cluster name
-CLUSTER_NAME=pr1.agadia-gatekeeper
-
-# Set to 'basic' or 'trial' to automatically start the 30-day trial
-LICENSE=basic
-#LICENSE=trial
-
-# Port to expose Elasticsearch HTTP API to the host
-#ES_PORT=9200
-ES_PORT=127.0.0.1:9200
-
-# Port to expose Kibana to the host
-KIBANA_PORT=5601
-#KIBANA_PORT=80
-
-# Increase or decrease based on the available host memory (in bytes)
-MEM_LIMIT=2073741824
+CLUSTER_NAME=pr1.copro-utils
 
 # Project namespace (defaults to the current folder name if not set)
-COMPOSE_PROJECT_NAME=gatekeeper
+COMPOSE_PROJECT_NAME=copro-utils
 
 #volume base dir
-BASE_DIR=/home/deploy/agadia-data
+BASE_DIR=/home/manikandan.tm@zucisystems.com/data
 
 #Container
 CONTAINER_PREFIX=pr1
