docker file for file bucketing is added

--- a/docker-compose_copro_bucketing.yml
+++ b/docker-compose_copro_bucketing.yml
@@ -1,6 +1,6 @@
 services:
 
-  copro-utils:
+  copro-bucketing:
     build: .
     container_name: pr1.copro.bucketing
     image: zsubscription/pr1.copro.bucketing:latest
